fix: small screen layout issues
It might still be broken, but its getting late 😖

--- a/src/style.css
+++ b/src/style.css
@@ -30,13 +30,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 .site-controls {
@@ -50,6 +51,7 @@ h1 {
 
 #app {
   margin: 0 auto;
+  width: 100%;
 }
 
 .button {
