--- a/src/styles/main-menu-view.css
+++ b/src/styles/main-menu-view.css
@@ -48,6 +48,7 @@
 }
 
 .main-menu {
+    margin: 0 auto;
     opacity: 1;
     position: relative;
     height: 100vh;
